uma/grammar.txt
program ::= {func}*

func       ::= "fn" IDEN "(" {param_decl {"," param_decl}* {","}} ")" "{" {stmt}* "}"
param_decl ::= {"mut"} IDEN

stmt ::= "if" "(" expr ")" stmt {"else" stmt}
stmt ::= "while" "(" expr ")" {":" "(" expr ")"} stmt
stmt ::= "loop" stmt
stmt ::= "return" {expr} ";"
stmt ::= "break" ";"
stmt ::= "continue" ";"
stmt ::= "{" {stmt}* "}"
stmt ::= "let" {"mut"} IDEN "=" expr ";"
stmt ::= expr ";"

expr        ::= assign_expr
assign_expr ::= ter_expr {("="|"+="|"-="|"*="|"/="|"%=") assign_expr}
ter_expr    ::= or_expr {"?" expr ":" ter_expr}
or_expr     ::= {or_expr "||"} and_expr
and_expr    ::= {and_expr "&&"} eq_expr
eq_expr     ::= {eq_expr ("=="|"!=")} ineq_expr
ineq_expr   ::= {ineq_expr ("<"|"<="|">"|">=")} add_expr 
add_expr    ::= {add_expr ("+"|"-")} mul_expr
mul_expr    ::= {mul_expr ("*"|"/"|"%")} unary_expr
unary_expr  ::= ("+"|"-"|"!") access_expr
access_expr ::= access_expr {"[" expr "]"}*

dict_entry ::= expr ":" expr

base_expr ::= "(" expr ")"
base_expr ::= IDEN {"(" {expr {"," expr}* {","}} ")"}
base_expr ::= "{" {dict_entry {"," dict_entry}* {","}}  "}"
base_expr ::= "null"
base_expr ::= NUM_LIT
base_expr ::= STR_LIT
